# email-manager-agent

./: .env.example  .env.example.yml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
docs/: README.md
docs/architecture/: taxonomy-label-sync.md
email-intelligence/: PLANNING.md  README.md  TARGET_STATE_POLICY_AUTOMATION.md  TAXONOMY.md
email-intelligence/backend/: .env.example  requirements.txt
email-intelligence/backend/app/: __init__.py  config.py  main.py  maintenance.py  settings.py
email-intelligence/backend/app/analysis/: __init__.py
email-intelligence/backend/app/analysis/events/: __init__.py  extractor.py  heuristics.py  models.py  prompt.py
email-intelligence/backend/app/analysis/payments/: __init__.py  extractor.py  models.py  prompt.py
email-intelligence/backend/app/api/: dashboard.py  events.py  gmail_sync.py  jobs.py  messages.py  models.py  payments.py  policies.py  taxonomy.py  trash.py
email-intelligence/backend/app/clustering/: analysis.py  pipeline.py
email-intelligence/backend/app/db/: __init__.py  postgres.py  schema.py
email-intelligence/backend/app/domain/: __init__.py  email.py
email-intelligence/backend/app/gmail/: __init__.py  client.py  mapping.py
email-intelligence/backend/app/google/: calendar_client.py
email-intelligence/backend/app/ingestion/: __init__.py  fake_source.py  metadata_ingestion.py  pipeline.py
email-intelligence/backend/app/labeling/: incremental_pipeline.py  labeler.py  prompt.py  tier1.py  tier2.py
email-intelligence/backend/app/policy/: engine.py  models.py
email-intelligence/backend/app/repository/: __init__.py  email_query_repository.py  email_repository.py  event_metadata_repository.py  payment_metadata_repository.py  pipeline_kv_repository.py  policy_repository.py  retention_archive_repository.py  taxonomy_admin_repository.py  taxonomy_assignment_repository.py  taxonomy_cleanup_repository.py  taxonomy_repository.py  trash_repository.py
email-intelligence/backend/app/utils/: subject.py
email-intelligence/backend/app/vector/: __init__.py  embedding.py  qdrant.py  vectorizer.py
email-intelligence/backend/scripts/: backfill_qdrant_embeddings.py  backfill_taxonomy_assignments.py  cleanup_label_strings.py  gmail_auth.py  run_event_extraction_recent.py  run_event_extraction_tickets_bookings.py  run_maintenance.py  run_payment_extraction_financial.py  run_payment_extraction_recent.py  smoke_gmail_metadata.py
email-intelligence/docker/: docker-compose.yml
email-intelligence/docker/postgres/: init.sql
email-intelligence/frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
email-intelligence/frontend/src/: App.tsx  main.tsx  styles.css
email-intelligence/frontend/src/api/: client.ts  types.ts
email-intelligence/frontend/src/components/: EmptyDashboard.tsx
email-intelligence/frontend/src/demo/: mockApi.ts
email-intelligence/frontend/src/pages/: CategoriesPage.tsx  DashboardPage.tsx  EventsPage.tsx  FinancialsPage.tsx  JobsPage.tsx  SettingsPage.tsx
email-intelligence/frontend/src/theme/: AppThemeProvider.tsx
email-intelligence/frontend/src/types/: nivo-pie.d.ts
email-intelligence/frontend/src/ui/: DetailPanel.tsx  HierarchyTree.tsx  PrimaryActionsBar.tsx  SplitLayout.tsx  SunburstPanel.tsx  TopBar.tsx  index.ts  useJobPolling.ts
email-intelligence/frontend/src/utils/: colors.ts  tree.ts
scripts/: README.md
src/email_manager_agent/: __init__.py  cli.py  config.py  exceptions.py
src/email_manager_agent/agent/: __init__.py  email_agent.py
src/email_manager_agent/gmail/: __init__.py  client.py  parsing.py
src/email_manager_agent/index/: __init__.py  repository.py
src/email_manager_agent/models/: __init__.py  email_header.py
src/email_manager_agent/ollama/: __init__.py  client.py
src/email_manager_agent/utils/: __init__.py
tests/: conftest.py
tests/integration/: __init__.py  test_gmail_integration.py  test_ollama_integration.py
tests/unit/: __init__.py  test_config.py  test_email_agent.py  test_email_index_repository.py  test_gmail_client.py  test_gmail_parsing.py  test_models.py  test_ollama_client.py
